--- a/styles2.css
+++ b/styles2.css
@@ -1,173 +1,27 @@
-/* Estilos globales */
-:root {
-  /* Variables CSS */
-  --main-font: Arial, sans-serif;
-  --background-color: #f5f5f5;
-  --header-background-color: #ffffff;
-  --header-shadow-color: rgba(0, 0, 0, 0.1);
-  --link-color: #333333;
-  --link-hover-color: #ff5a5f;
-  --hero-color: #ffffff;
-  --button-background-color: #ff5a5f;
-  --listing-background-color: #ffffff;
-  --listing-shadow-color: rgba(0, 0, 0, 0.1);
-  --listing-text-color: #777777;
-  --footer-background-color: #333333;
-  --footer-color: #ffffff;
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+body {background-color: #0D1B2B; overflow-x: hidden; font-family: roboto; -webkit-font-smoothing: antialiased; margin: 0;}
+.flex { display: -webkit-flex; display: flex; -webkit-flex-direction: row;  flex-direction: row; -webkit-justify-content: flex-start; justify-content: flex-start;}
+
+.slider-wrapper div {position: relative;}
+.slider-wrapper {margin-top: 5vw;  margin-left: 11vw;}
+.slide-image {height: 24vw;}
+.slide-image img {width: 24vw; cursor: pointer;}
+.slide-content {width: 25vw; color: #fff; padding:3vw 18vw 3vw 9vw;}
+.slide-date {color: #0a8acb; font-size: 1.1vw; font-weight: 400; letter-spacing: 0.1vw; padding-bottom: 1.4vw;}
+.slide-title {font-size: 1.2vw; font-weight: 400; letter-spacing: 0.1vw; line-height: 1.55vw; padding-bottom: 1.8vw;}
+.slide-text {font-size: 0.80vw; line-height: 1.2vw; opacity: 0.8; padding-bottom: 4vw;}
+.slide-more {font-weight: 400; letter-spacing: 0.1vw; float: left; font-size: 0.9vw;}
+.slide-bullet {width: 0.5vw; height: 0.5vw; background-color: #0b8bcc; border-radius: 200%; position: relative; margin-left: 1.2vw;}
+.slide-nav {margin-left: 64vw; margin-top: -5.5vw;}
+
+div.overlay-blue {width: 100%; height: 100%; position: absolute; top: 0; transition: 0.5s ease all;}
+div.overlay-blue:hover {background-color: rgba(13, 27, 43, 0.5);}
+
+.arrows{width: 3.5vw; margin-top: -5.8vw; margin-left: 72vw; position: relative;}
+.arrow {display: inline-block; position: absolute; width: 1.2vw; height: 1.2vw; background: transparent; text-indent: -9999px; border-top: 0.15vw solid #fff; border-left: 0.15vw solid #fff; transition: all .1s ease-in-out; text-decoration: none; color: transparent;
 }
-
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+.arrow:hover {border-color: #0A8ACB; border-width: 0.25vw;
 }
-
-body {
-  font-family: var(--main-font);
-  background-color: var(--background-color);
-}
-
-.container {
-  max-width: 1200px;
-  margin: 0 auto;
-  padding: 20px;
-}
-
-/* Estilos de encabezado */
-header {
-  background-color: var(--header-background-color);
-  padding: 20px;
-  box-shadow: 0 2px 4px var(--header-shadow-color);
-}
-
-.logo {
-  font-size: 24px;
-  font-weight: bold;
-}
-
-nav ul {
-  list-style: none;
-  display: flex;
-  justify-content: flex-end;
-}
-
-nav ul li {
-  margin-left: 20px;
-}
-
-nav ul li a {
-  text-decoration: none;
-  color: var(--link-color);
-  transition: color 0.3s ease;
-}
-
-nav ul li a:hover {
-  color: var(--link-hover-color);
-}
-
-/* Sección hero */
-.hero {
-  background-image: url("wallhaven-48rjw2.jpg");
-  background-size: cover;
-  background-position: center;
-  padding: 100px;
-  text-align: center;
-  color: var(--hero-color);
-}
-
-.hero h1 {
-  font-size: 48px;
-  margin-bottom: 20px;
-}
-
-.search-bar {
-  margin-top: 20px;
-}
-
-.search-bar input[type="text"],.search-bar button {
-  padding: 10px;
-  border: none;
-  border-radius: 5px;
-}
-
-.search-bar button {
-  background-color: var(--button-background-color);
-  color: var(--hero-color);
-  cursor: pointer;
-}
-
-/* Sección de listados */
-.listings {
-  padding: 40px 0;
-  text-align: center;
-}
-
-.listings h2 {
-  font-size: 36px;
-  margin-bottom: 20px;
-}
-
-.listing-grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
-  grid-gap: 20px;
-}
-
-.listing-item {
-  background-color: var(--listing-background-color);
-  padding: 20px;
-  box-shadow: 0 2px 4px var(--listing-shadow-color);
-  transition: transform 0.3s ease;
-}
-
-.listing-item:hover {
-  transform: translateY(-5px);
-}
-
-.listing-item img {
-  width: 100%;
-  height: auto;
-  margin-bottom: 10px;
-  border-radius: 5px;
-  filter: brightness(50%);
-}
-
-.listing-item h3 {
-  font-size: 24px;
-  margin-bottom: 10px;
-}
-
-.listing-item p {
-  color: var(--listing-text-color);
-}
-
-/* Estilos de pie de página */
-footer {
-  background-color: var(--footer-background-color);
-  color: var(--footer-color);
-  padding: 20px;
-  text-align: center;
-}
-
-/* Estilos responsivos */
-@media (max-width: 768px) {
- .container {
-      padding: 10px;
-  }
-
- .hero {
-      padding: 50px;
-  }
-
- .hero h1 {
-      font-size: 36px;
-  }
-
- .search-bar input[type="text"] {
-      width: 100%;
-  }
-
- .listing-grid {
-      grid-template-columns: repeat(2, 1fr);
-  }
-}
+.arrow:before {display: block; height: 200%; width: 200%; margin-left: -50%; margin-top: -50%; content: ""; transform: rotate(45deg);}
+.arrow.prev {transform: rotate(-45deg); left: 0;}
+.arrow.next {transform: rotate(135deg); right: 0;}
