--- a/update.css
+++ b/update.css
@@ -15,24 +15,23 @@ html {
 }
 
 /* Estilos de navegación */
-/* CSS Document */
 :root{
     --color:white;
     --fnd : #1b0202;
     --fndRsp: white;
     --colorRsp: black;
- }
- .cajaNav{
+}
+.cajaNav{
     font-family: sans-serif;
     display:flex;
     justify-content: space-between;
     background:var(--fnd);
     color: var(--color);
- }
- .cajaNav .barNav{
+}
+.cajaNav .barNav{
     margin:0 10px 0 0;
- }
- .cajaNav .titNav{
+}
+.cajaNav .titNav{
     display:flex;
     justify-content:space-between;
     align-items:center;
@@ -40,35 +39,35 @@ html {
     background:var(--fnd);
     color:var(--color);
     height:auto;
- } 
- .cajaNav .titNav .toggle{
+} 
+.cajaNav .titNav .toggle{
     display:none;
- }
- .cajaNav .titNav .logo{
+}
+.cajaNav .titNav .logo{
     margin: 10px 10px;
- }
- .cajaNav .barNav {
+}
+.cajaNav .barNav {
     display:flex;
     list-style:none;
     align-items: center;
     padding:0;
- }
- .cajaNav .barNav li{
+}
+.cajaNav .barNav li{
     display:flex;
     align-items:center;
     padding: 0 20px ;
     height:100%; 
- }
- .cajaNav .barNav li:hover{
+}
+.cajaNav .barNav li:hover{
     background: var(--color);
     color:var(--fnd);
     cursor: pointer;
- }
- .cajaNav .barNav li a{
+}
+.cajaNav .barNav li a{
     text-decoration: none;
     cursor: pointer;
     color:inherit;
- }
+}
 
 /* Contenedor principal */
 .container {
@@ -78,7 +77,7 @@ html {
 }
 
 /* Formulario */
-#product-form {
+#updateForm {
     display: flex;
     flex-direction: column;
     gap: 15px;
@@ -86,18 +85,18 @@ html {
     margin-bottom: 20px;
 }
 
-#product-form label {
+#updateForm label {
     font-weight: bold;
 }
 
-#product-form input,
-#product-form textarea {
+#updateForm input,
+#updateForm textarea {
     padding: 10px;
     border-radius: 5px;
     border: 1px solid #ccc;
 }
 
-#product-form button[type="submit"] {
+#updateForm button[type="submit"] {
     padding: 10px;
     border: none;
     background-color: #000;
@@ -106,7 +105,7 @@ html {
     transition: background-color 0.3s ease;
 }
 
-#product-form button[type="submit"]:hover {
+#updateForm button[type="submit"]:hover {
     background-color: #333;
 }
 
@@ -135,6 +134,7 @@ html {
     line-height: 1.5;
     color: #555;
 }
+
 .container-img {
     height: 150px; /* Altura deseada */
     width: 100%; /* Ancho máximo para que se ajuste al contenedor */
@@ -162,3 +162,16 @@ html {
 #clearStorage:hover {
     background-color: #d00;
 }
+/* ----------------------------------- */
+/*              HEADER                 */
+/* ----------------------------------- */
+
+.cajaNav .logo-container {
+    display: flex;
+    align-items: center;
+ }
+ 
+ .cajaNav .logo-container .logo {
+    margin-left: 10px;
+ }
+ 
